--- a/index.ipynb
+++ b/index.ipynb
@@ -60,9 +60,7 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    pass\n",
-    "\n",
-    "def three_x_y_at_three(x):\n",
+    "    passdef three_x_y_at_three(x):\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_six(x):\n",
