automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,7 +60,9 @@
    "outputs": [],
    "source": [
     "def three_x_y_at_one(x):\n",
-    "    passdef three_x_y_at_three(x):\n",
+    "    p\n",
+    "\n",
+    "def three_x_y_at_three(x):\n",
     "    pass\n",
     "\n",
     "def three_x_y_at_six(x):\n",
