automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -72,16 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18"
+       "36"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    pass\n",
+    "    return lambda\n",
     "\n",
     "def y_values_for_at_three(x_values):\n",
     "    pass\n",
