--- a/index.ipynb
+++ b/index.ipynb
@@ -114,14 +114,14 @@
     "def y_values_for_at_one(x_values):\n",
     "    return list(map(lambda x: three_x_y_at_one, x_values))\n",
     "\n",
-    "def y_values_for_at_three(x_values):\n",
-    "    pass\n",
+    "#def y_values_for_at_three(x_values):\n",
+    "#    pass\n",
     "\n",
-    "def y_values_for_at_six(x_values):\n",
-    "    pass\n",
+    "#def y_values_for_at_six(x_values):\n",
+    "#    pass\n",
     "\n",
-    "def y_values_for_at_nine(x_values):\n",
-    "    pass"
+    "#def y_values_for_at_nine(x_values):\n",
+    "#    pass"
    ]
   },
   {
