automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "zero_to_four = list(range(0, 5))\n",
     "\n",
     "def y_values_for_at_one(x_values):\n",
-    "    return list(map(lambda x: three_x_y_at_one, x_values))\n",
+    "    return map(lambda x: three_x_y_at_one, x_values)\n",
     "\n",
     "#def y_values_for_at_three(x_values):\n",
     "#    pass\n",
@@ -124,26 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>,\n",
-       " <function __main__.three_x_y_at_one(x)>]"
+       "<map at 0x7fac7def3f28>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
