--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 3, 6, 9, 12]"
+       "[0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,8 @@
     "y_values_for_at_one(zero_to_four) # [0, 3, 6, 9, 12]\n",
     "y_values_for_at_one(zero_to_ten) # [0, 3, 6, 9, 12, 15, 18, 21, 24, 27, 30]\n",
     "\n",
-    "#y_values_for_at_three(zero_to_four) # [0, 9, 18, 27, 36]\n",
-    "#y_values_for_at_three(zero_to_ten) # [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]\n",
+    "y_values_for_at_three(zero_to_four) # [0, 9, 18, 27, 36]\n",
+    "y_values_for_at_three(zero_to_ten) # [0, 9, 18, 27, 36, 45, 54, 63, 72, 81, 90]\n",
     "\n",
     "#y_values_for_at_six(zero_to_four) # [0, 18, 36, 54, 72]\n",
     "#y_values_for_at_six(zero_to_ten) # [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180]\n",
