--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "    return list(map(lambda x: three_x_y_at_six(x), x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "#    pass"
+    "    return list(map(lambda x: three_x_y_at_six(x), x_values))"
    ]
   },
   {
