--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,21 +119,21 @@
     "    return list(map(lambda x: three_x_y_at_six(x), x_values))\n",
     "\n",
     "def y_values_for_at_nine(x_values):\n",
-    "    return list(map(lambda x: three_x_y_at_six(x), x_values))"
+    "    return list(map(lambda x: three_x_y_at_nine(x), x_values))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180]"
+       "[0, 27, 54, 81, 108]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
     "y_values_for_at_six(zero_to_four) # [0, 18, 36, 54, 72]\n",
     "y_values_for_at_six(zero_to_ten) # [0, 18, 36, 54, 72, 90, 108, 126, 144, 162, 180]\n",
     "\n",
-    "#y_values_for_at_nine(zero_to_four) # [0, 27, 54, 81, 108]\n",
+    "y_values_for_at_nine(zero_to_four) # [0, 27, 54, 81, 108]\n",
     "#y_values_for_at_nine(zero_to_ten) #[0, 27, 54, 81, 108, 135, 162, 189, 216, 243, 270]"
    ]
   },
