--- a/index.ipynb
+++ b/index.ipynb
@@ -742,6 +742,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
+    "    first term=\n",
     "    return list_of_terms[0][0]"
    ]
   },
