automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -743,7 +743,7 @@
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    first term=\n",
-    "    return list_of_terms[0][0]"
+    "    return "
    ]
   },
   {
