--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -742,7 +742,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    first term = list_of_terms[0][0] * \n",
+    "    first term = list_of_terms[0][0] * x_valu\n",
     "    return "
    ]
   },
