--- a/index.ipynb
+++ b/index.ipynb
@@ -744,7 +744,7 @@
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
     "    first_term = list_of_terms[0][0] * x_value ** list_of_terms[0][1] * y_value ** list_of_terms[0][2]\n",
     "    second_term = list_of_terms[1][0] * x_value ** list_of_terms[1][1] * y_value ** list_of_terms[1][2]\n",
-    "    third_term\n",
+    "    third_term = list_of_terms[2][0] * x_value ** list_of_terms[2][1] * y_value ** list_of_terms[0][2]\n",
     "    return "
    ]
   },
