--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,21 +745,21 @@
     "    first_term = list_of_terms[0][0] * x_value ** list_of_terms[0][1] * y_value ** list_of_terms[0][2]\n",
     "    second_term = list_of_terms[1][0] * x_value ** list_of_terms[1][1] * y_value ** list_of_terms[1][2]\n",
     "    third_term = list_of_terms[2][0] * x_value ** list_of_terms[2][1] * y_value ** list_of_terms[2][2]\n",
-    "    return first_term + second_term + thi"
+    "    return first_term + second_term + third_term"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,11 +770,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "multivariable_output_at(four_x_squared_y_plus_three_x_plus_y, 2, 2) # 40"
    ]
