--- a/index.ipynb
+++ b/index.ipynb
@@ -853,26 +853,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return (term[0]*term[1]*term[2], term[1]-1, term[2]-1)"
+    "    return (term[0]*term[1]*term[2], term[1]-1, term[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 1, 0)"
+       "(8, 1, 1)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
