--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -853,17 +853,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def term_df_dx(term):\n",
-    "    return (term[0]*term[1]*term[2], term[1]-1, term[2])"
+    "    return (term[0]*term[1], term[1]-1, term[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "(8, 1, 1)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,20 +891,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0, -1, 1)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = (1, 0, 1)\n",
     "term_df_dx(y) # (0, -1, 1)"
