automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1109,7 +1109,7 @@
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    pass"
+    "    return list(map(lambda term: term_df_dx(term), list_of_terms))"
    ]
   },
   {
