--- a/index.ipynb
+++ b/index.ipynb
@@ -1102,23 +1102,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 71,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
-    "    return list(map(lambda term: term_df_dx(term), list_of_terms))"
+    "    return list(map(lambda term: term_df_dy(term), list_of_terms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(4, 2, 0), (0, 1, -1), (1, 0, 0)]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_dy(four_x_squared_y_plus_three_x_plus_y) # [(4, 2, 0), (1, 0, 0)]"
    ]
