--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -926,18 +926,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-74-eccfc666d3f1>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-74-eccfc666d3f1>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter derivative_term: derivative_term[0]>0, derivative_terms )\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def df_dx(list_of_terms):\n",
     "    derivative_terms = list(map(lambda term: term_df_dx(term), list_of_terms))\n",
-    "    return list(filter derivative_term: derivative_term[0]>0, derivati )"
+    "    return list(filter derivative_term: derivative_term[0]>0, derivative_terms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +955,7 @@
        "[(8, 1, 1), (3, 0, 0), (0, -1, 1)]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
