--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -926,22 +926,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-74-eccfc666d3f1>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-76-994c32bb74cd>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-74-eccfc666d3f1>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter derivative_term: derivative_term[0]>0, derivative_terms )\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-76-994c32bb74cd>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    return list(filter(lambda) derivative_term: derivative_term[0]>0, derivative_terms)\u001b[0m\n\u001b[0m                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def df_dx(list_of_terms):\n",
     "    derivative_terms = list(map(lambda term: term_df_dx(term), list_of_terms))\n",
-    "    return list(filter derivative_term: derivative_term[0]>0, derivative_terms)"
+    "    return list(filter(lambda derivative_term: derivative_term[0]>0, derivative_terms)"
    ]
   },
   {
