--- a/index.ipynb
+++ b/index.ipynb
@@ -1109,7 +1109,7 @@
    "source": [
     "def df_dy(list_of_terms):\n",
     "    derivative_terms = list(map(lambda term: term_df_dy(term), list_of_terms))\n",
-    "    return list(filter (lambda deri)"
+    "    return list(filter (lambda derivative_term: derivative_term[0]>0)"
    ]
   },
   {
