automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1103,27 +1103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "def df_dy(list_of_terms):\n",
     "    derivative_terms = list(map(lambda term: term_df_dy(term), list_of_terms))\n",
-    "    return list(filter (lambda derivative_term: derivative_term[0]>0)"
+    "    return list(filter (lambda derivative_term: derivative_term[0]>0, derivative_terms))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, 2, 0), (0, 1, -1), (1, 0, 0)]"
+       "[(4, 2, 0), (1, 0, 0)]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,16 +1134,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2, 3, 0), (3, 1, 0), (0, 1, -1)]"
+       "[(2, 3, 0), (3, 1, 0)]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
